--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
+    "dev": "json-server --watch db.json --port 8000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
